--- a/App/Voltflow/Views/Account/AccountView.axaml
+++ b/App/Voltflow/Views/Account/AccountView.axaml
@@ -2,15 +2,15 @@
     x:Class="Voltflow.Views.Account.AccountView"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:account="clr-namespace:Voltflow.ViewModels.Account"
     xmlns:accountPages="clr-namespace:Voltflow.Views.Account.Panels"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:viewModelsAccount="clr-namespace:Voltflow.ViewModels.Account"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
     <Design.DataContext>
-        <viewModelsAccount:AccountViewModel />
+        <account:AccountViewModel />
     </Design.DataContext>
 
     <StackPanel
@@ -22,11 +22,11 @@
             Store all forms here (I split them into each file so the code here looks *clean*).
             Each form knows when to display because of AuthTypeConverter and set CurrentAuthType in AccountViewModel.
         -->
-		<accountPages:SignUpForm />
-		<accountPages:SignInForm />
-		<accountPages:TwoFactorAuthForm />
-		<accountPages:PasswordResetForm />
-		<accountPages:EmailVerificationForm />
-		<accountPages:AccountPanel />
+        <accountPages:SignUpForm />
+        <accountPages:SignInForm />
+        <accountPages:TwoFactorAuthForm />
+        <accountPages:PasswordResetForm />
+        <accountPages:EmailVerificationForm />
+        <accountPages:AccountPanel />
     </StackPanel>
 </UserControl>
