--- a/App/Voltflow/Views/Account/Panels/AccountPanel.axaml
+++ b/App/Voltflow/Views/Account/Panels/AccountPanel.axaml
@@ -20,25 +20,49 @@
     </UserControl.Resources>
 
     <StackPanel IsVisible="{Binding CurrentAuthType, Converter={StaticResource AuthTypeConverter}, ConverterParameter=SignedIn}">
-        <Button
-            HorizontalAlignment="Stretch"
-            HorizontalContentAlignment="Center"
-            Command="{Binding NavigateHome}">
+        <Button HorizontalAlignment="Stretch" HorizontalContentAlignment="Center">
             <StackPanel Orientation="Horizontal">
-                <iconPacks:PackIconBootstrapIcons VerticalAlignment="Center" Kind="ArrowLeft" />
-                <TextBlock VerticalAlignment="Center" Text="Go Back" />
+                <iconPacks:PackIconBootstrapIcons VerticalAlignment="Center" Kind="GearFill" />
+                <TextBlock VerticalAlignment="Center" Text="Settings" />
             </StackPanel>
         </Button>
 
-        <Button
-            HorizontalAlignment="Stretch"
-            HorizontalContentAlignment="Center"
-            Classes="Danger"
-            Command="{Binding SignOut}">
+        <Button HorizontalAlignment="Stretch" HorizontalContentAlignment="Center">
             <StackPanel Orientation="Horizontal">
-                <iconPacks:PackIconBootstrapIcons VerticalAlignment="Center" Kind="Trash3Fill" />
-                <TextBlock VerticalAlignment="Center" Text="Sign Out" />
+                <iconPacks:PackIconBootstrapIcons VerticalAlignment="Center" Kind="Cash" />
+                <TextBlock VerticalAlignment="Center" Text="Scraps" />
             </StackPanel>
         </Button>
+
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="8" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+
+            <Button
+                Grid.Column="0"
+                HorizontalAlignment="Stretch"
+                HorizontalContentAlignment="Center"
+                Command="{Binding NavigateHome}">
+                <StackPanel Orientation="Horizontal">
+                    <iconPacks:PackIconBootstrapIcons VerticalAlignment="Center" Kind="ArrowLeft" />
+                    <TextBlock VerticalAlignment="Center" Text="Go Back" />
+                </StackPanel>
+            </Button>
+
+            <Button
+                Grid.Column="2"
+                HorizontalAlignment="Stretch"
+                HorizontalContentAlignment="Center"
+                Classes="Danger"
+                Command="{Binding SignOut}">
+                <StackPanel Orientation="Horizontal">
+                    <iconPacks:PackIconBootstrapIcons VerticalAlignment="Center" Kind="DoorOpenFill" />
+                    <TextBlock VerticalAlignment="Center" Text="Sign Out" />
+                </StackPanel>
+            </Button>
+        </Grid>
     </StackPanel>
 </UserControl>
