--- a/App/Voltflow/Views/Pages/Charging/ChargingView.axaml
+++ b/App/Voltflow/Views/Pages/Charging/ChargingView.axaml
@@ -9,24 +9,42 @@
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
-    <Design.DataContext>
-        <charging:ChargingViewModel />
-    </Design.DataContext>
-
+	
     <StackPanel
         Width="256"
         HorizontalAlignment="Center"
         VerticalAlignment="Center">
-        <Button
-            HorizontalAlignment="Stretch"
-            HorizontalContentAlignment="Center"
-            Command="{Binding Start}">
-            <StackPanel Orientation="Horizontal">
-                <iconPacks:PackIconBootstrapIcons VerticalAlignment="Center" Kind="Question" />
-                <TextBlock VerticalAlignment="Center" Text="Test Webhook" />
-            </StackPanel>
-        </Button>
+		<!--Station info-->
 
+		<TextBlock Text="{Binding CurrentStation.Cost}"/>
+		<TextBlock Text="{Binding CurrentStation.MaxChargeRate}"/>
+		
+		<Separator/>
+		<!--Data-->
+		
+		<ComboBox SelectedIndex="{Binding PickedIndex}" ItemsSource="{Binding Cars}">
+			<ComboBox.ItemTemplate>
+				<DataTemplate>
+					<TextBlock Text="{Binding Name}"/>
+				</DataTemplate>
+			</ComboBox.ItemTemplate>
+		</ComboBox>
+		
+		<CheckBox IsChecked="{Binding DeclaredAmount}" Content="Declare amount"/>
+		<TextBox Text="{Binding Amount}" IsEnabled="{Binding DeclaredAmount}" Watermark="Amount of kWh"/>
+		
+		<Separator/>
+		<!--Chariging info-->
+
+		<TextBlock Text="{Binding Time}"/>
+		<TextBlock Text="{Binding TotalCharge}"/>
+		<TextBlock Text="{Binding TotalCost}"/>
+		
+		<Separator/>
+		<!--Controls-->
+
+		<Button Command="{Binding Start}" Content="Start Charging"/>
+		<Button Command="{Binding Stop}" Content="Stop Charging"/>
         <Button
             HorizontalAlignment="Stretch"
             HorizontalContentAlignment="Center"
