--- a/App/Voltflow/Views/Pages/Statistics/StatisticsView.axaml
+++ b/App/Voltflow/Views/Pages/Statistics/StatisticsView.axaml
@@ -8,36 +8,16 @@
     xmlns:statistics="clr-namespace:Voltflow.ViewModels.Pages.Statistics"
     d:DesignHeight="450"
     d:DesignWidth="800"
-    mc:Ignorable="d">
-    <Design.DataContext>
-        <statistics:StatisticsViewModel />
-    </Design.DataContext>
-
+    mc:Ignorable="d"
+	xmlns:lvc="using:LiveChartsCore.SkiaSharpView.Avalonia">
+	
     <StackPanel
         MaxWidth="256"
         HorizontalAlignment="Stretch"
         VerticalAlignment="Center">
-        <Button HorizontalAlignment="Stretch" HorizontalContentAlignment="Center">
-            <StackPanel Orientation="Horizontal">
-                <iconPacks:PackIconBootstrapIcons VerticalAlignment="Center" Kind="QuestionCircleFill" />
-                <TextBlock VerticalAlignment="Center" Text="Statistics" />
-            </StackPanel>
-        </Button>
 
-        <Button HorizontalAlignment="Stretch" HorizontalContentAlignment="Center">
-            <StackPanel Orientation="Horizontal">
-                <iconPacks:PackIconBootstrapIcons VerticalAlignment="Center" Kind="FlagFill" />
-                <TextBlock VerticalAlignment="Center" Text="Generate Report" />
-            </StackPanel>
-        </Button>
-
-        <Button HorizontalAlignment="Stretch" HorizontalContentAlignment="Center">
-            <StackPanel Orientation="Horizontal">
-                <iconPacks:PackIconBootstrapIcons VerticalAlignment="Center" Kind="Cash" />
-                <TextBlock VerticalAlignment="Center" Text="Transaction History" />
-            </StackPanel>
-        </Button>
-
+		<lvc:PieChart Series="{Binding Series}" Title="{Binding Title}" Width="800" Height="450"/>
+		
         <Button
             HorizontalAlignment="Stretch"
             HorizontalContentAlignment="Center"
