Improve account panels

--- a/App/Voltflow/Views/Account/Panels/PasswordResetPanel.axaml
+++ b/App/Voltflow/Views/Account/Panels/PasswordResetPanel.axaml
@@ -59,7 +59,7 @@
                     Classes="size-sm color-gray"
                     IsVisible="True"
                     Kind="KeyFill" />
-                <TextBlock Classes="size-sm color-gray weight-bold" Text="Token" />
+                <TextBlock Classes="size-sm color-gray weight-bold" Text="Password Reset Token" />
             </StackPanel>
             <TextBox Text="{Binding PasswordResetForm.Token}" Watermark="Enter received token here" />
         </StackPanel>
