--- a/App/Voltflow/Views/Account/Panels/EmailVerificationPanel.axaml
+++ b/App/Voltflow/Views/Account/Panels/EmailVerificationPanel.axaml
@@ -28,7 +28,7 @@
                 Classes="size-sm color-gray"
                 IsVisible="True"
                 Kind="KeyFill" />
-            <TextBlock Classes="size-sm color-gray weight-bold" Text="Token" />
+            <TextBlock Classes="size-sm color-gray weight-bold" Text="Email Verification Token" />
         </StackPanel>
         <TextBox Text="{Binding EmailVerificationForm.Token}" Watermark="Enter received token here" />
 
