--- a/App/Voltflow/App.axaml
+++ b/App/Voltflow/App.axaml
@@ -12,7 +12,10 @@
     </Application.DataTemplates>
 
     <Application.Styles>
-        <!--  Use SemiTheme with Ursa  -->
+		<FluentTheme />
+		<StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Fluent.xaml"/>
+
+		<!--  Use SemiTheme with Ursa  -->
         <semi:SemiTheme Locale="en-us" />
         <u-semi:SemiTheme Locale="en-us" />
 
