--- a/App/Voltflow/Views/Pages/Statistics/StatisticsView.axaml
+++ b/App/Voltflow/Views/Pages/Statistics/StatisticsView.axaml
@@ -16,7 +16,17 @@
         HorizontalAlignment="Stretch"
         VerticalAlignment="Center">
 
-		<lvc:PieChart Series="{Binding Series}" Title="{Binding Title}" Width="800" Height="450"/>
+		<!--this button should be only visible when someone is admin-->
+		<Button Command="{Binding NavigateAdvanced}" Content="Advanced statistics"/>
+		
+		<!--Switch this to whatever makes sense but no checkbox-->
+		<CheckBox IsChecked="{Binding Mode}" Content="Switch to energy used"/>
+		
+		<lvc:PieChart Series="{Binding PieData}" Title="{Binding Title}" Width="800" Height="450"/>
+
+		<Panel Background="Gray" Width="500" Height="50">
+			<Button Content="Generate CSV"/>
+		</Panel>
 		
         <Button
             HorizontalAlignment="Stretch"
@@ -27,6 +37,12 @@
                 <TextBlock VerticalAlignment="Center" Text="Go Back" />
             </StackPanel>
         </Button>
-
+		
+		<DataGrid Height="100" 
+				  ItemsSource="{Binding Elements}"
+				  AutoGenerateColumns="True" IsReadOnly="True"
+				  GridLinesVisibility="All"
+				  BorderThickness="1" BorderBrush="Gray">
+		</DataGrid>
     </StackPanel>
 </UserControl>
