--- a/App/Voltflow/Views/Pages/Cars/CarsView.axaml
+++ b/App/Voltflow/Views/Pages/Cars/CarsView.axaml
@@ -1,32 +1,39 @@
-<UserControl xmlns="https://github.com/avaloniaui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="Voltflow.Views.Pages.Cars.CarsView">
-	<Panel>
-		<ItemsControl ItemsSource="{Binding cars}">
-			<ItemsControl.ItemTemplate>
-				<DataTemplate>
+<UserControl
+    x:Class="Voltflow.Views.Pages.Cars.CarsView"
+    xmlns="https://github.com/avaloniaui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:iconPacks="https://github.com/MahApps/IconPacks.Avalonia"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d">
+    <Panel>
+        <ItemsControl ItemsSource="{Binding cars}">
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Margin="10" Background="Black">
+                        <TextBlock Text="{Binding Name}" />
+                        <Button
+                            Command="{Binding $parent[ItemsControl].DataContext.NavigateToCarDetails}"
+                            CommandParameter="{Binding}"
+                            Content="settings" />
+                    </StackPanel>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
 
-					<StackPanel Background="Black" Margin="10">
-						<TextBlock Text="{Binding Name}"/>
-						<Button Content="settings" Command="{Binding $parent[ItemsControl].DataContext.NavigateToCarDetails}" CommandParameter="{Binding}"/>
-					</StackPanel>
+        <Button
+            Height="48"
+            Margin="16"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Bottom"
+            Command="{Binding NavigateToCreateCar}">
+            <StackPanel Orientation="Horizontal">
+                <iconPacks:PackIconBootstrapIcons VerticalAlignment="Center" Kind="PlusCircleFill" />
+                <TextBlock VerticalAlignment="Center" Text="Add Car" />
+            </StackPanel>
+        </Button>
+    </Panel>
 
-				</DataTemplate>
-			</ItemsControl.ItemTemplate>
-		</ItemsControl>
-		
-		<Button
-			Width="48"
-			Height="48"
-			Margin="16"
-			HorizontalAlignment="Right"
-			VerticalAlignment="Bottom"
-			CornerRadius="8"
-			Content="+"
-			Command="{Binding NavigateToCreateCar}"/>
-	</Panel>
-	
 </UserControl>
