--- a/App/Voltflow/Views/Pages/Statistics/StatisticsView.axaml
+++ b/App/Voltflow/Views/Pages/Statistics/StatisticsView.axaml
@@ -4,29 +4,22 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:iconPacks="https://github.com/MahApps/IconPacks.Avalonia"
+    xmlns:lvc="using:LiveChartsCore.SkiaSharpView.Avalonia"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:statistics="clr-namespace:Voltflow.ViewModels.Pages.Statistics"
     d:DesignHeight="450"
     d:DesignWidth="800"
-    mc:Ignorable="d"
-	xmlns:lvc="using:LiveChartsCore.SkiaSharpView.Avalonia">
-	
+    mc:Ignorable="d">
+
     <StackPanel
         MaxWidth="256"
         HorizontalAlignment="Stretch"
         VerticalAlignment="Center">
 
-		<lvc:PieChart Series="{Binding Series}" Title="{Binding Title}" Width="800" Height="450"/>
-		
-        <Button
-            HorizontalAlignment="Stretch"
-            HorizontalContentAlignment="Center"
-            Command="{Binding NavigateHome}">
-            <StackPanel Orientation="Horizontal">
-                <iconPacks:PackIconBootstrapIcons VerticalAlignment="Center" Kind="ArrowLeft" />
-                <TextBlock VerticalAlignment="Center" Text="Go Back" />
-            </StackPanel>
-        </Button>
-
+        <lvc:PieChart
+            Title="{Binding Title}"
+            Width="800"
+            Height="450"
+            Series="{Binding Series}" />
     </StackPanel>
 </UserControl>
